# xmr-stak-cpu

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  FREEBSDCOMPILE.md  LINUXCOMPILE.md  MACOSCOMPILE.md  README.md  appveyor.yml  autoAdjustHwloc.hpp  cli-miner.cpp  cmake  confg.txt  config.txt  config.txt.txt  console.cpp  console.h  donate-level.h  executor.cpp  httpd.cpp  instaler  jconf.cpp  jconf.h  minethd.cpp  minethd.h  msgstruct.h  socket.cpp  socks.h  xmrscpt  xmrstak
CI/appveyor/: install_cuda.bat
crypto/: cryptonight_aesni.c  cryptonight_aesni.h  cryptonight_common.c  cryptonight_common.cpp  cryptonight_hash.h  cryptonight_hash_bmi2.cpp  cryptonight_hash_sse2.cpp  low_power.h  mulx.hpp
scripts/aws_benchmarks/: README.md  main.tf  outputs.tf  run.sh  userdata.sh  variables.tf
scripts/azure_benchmarks/: README.md  main.tf  outputs.tf  run.sh  userdata.sh  variables.tf
visualstudio/: xmr-stak-cpu.cpp  xmr-stak-cpu.sln  xmr-stak-cpu.vcxproj  xmr-stak-cpu.vcxproj.filters
